# EmbeddedSystems-2025Spring

./: ..gitignore.un~  .gitignore  .gitignore~
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: W01-RTOS.language.settings.xml  W01-RTOS_LED.language.settings.xml
.metadata/.plugins/org.eclipse.cdt.ui/: workingSetConfigs.xml
.metadata/.plugins/org.eclipse.core.resources/: 4.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/W01-LED/: .location  .markers  1.tree
.metadata/.plugins/org.eclipse.core.resources/.root/: 4.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
AddBSP/: .cproject  .project  AddBSP Debug.launch  AddBSP.ioc
AddBSP/Core/Src/: main.c  stm32l4xx_hal_msp.c
Lab02-wifi_sensor/: .cproject  .mxproject  .project  Lab02-wifi_sensor Debug.launch  Lab02-wifi_sensor.ioc
Lab02-wifi_sensor/Common/Inc/: wifi.h
Lab02-wifi_sensor/Common/Src/: wifi.c
Lab02-wifi_sensor/Core/Inc/: main.h  stm32l4xx_it.h
Lab02-wifi_sensor/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
Lab04-BLE_Sensor/: .cproject  .mxproject  .project  Lab04-BLE_Sensor Debug.launch  Lab04-BLE_Sensor.ioc  ref_app_bluenrg_ms.c
Lab04-BLE_Sensor/BlueNRG_MS/App/: app_bluenrg_ms.c  gatt_db.c  gatt_db.h  sensor.c
Lab04-BLE_Sensor/Core/Inc/: b_l475e_iot01a2_conf.h  main.h
Lab04-BLE_Sensor/Core/Src/: main.c  stm32l4xx_hal_msp.c
Lab06-DataAquisition/: .cproject  .mxproject  .project  Lab06-DataAquisition Debug.launch  Lab06-DataAquisition.ioc
Lab06-DataAquisition/Core/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Lab06-DataAquisition/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
Lab07-CMSIS-DSP/: .cproject  .project  Lab07-CMSIS-DSP.ioc  Lab07-CMSIS-DSP.launch
Lab07-CMSIS-DSP/Core/Src/: main.c  stm32l4xx_hal_msp.c
W01-LED/: .mxproject  .project.bak  CMakeLists.txt  W01-LED.ioc
W01-LED/Core/Src/: main.c  stm32l4xx_hal_msp.c
W01-LED/cmake/stm32cubemx/: CMakeLists.txt
W01-RTOS_LED/: .cproject  .mxproject  .project  STM32L475VGTX_FLASH.ld  STM32L475VGTX_RAM.ld  W01-RTOS_LED Debug.launch  W01-RTOS_LED.ioc
W01-RTOS_LED/Core/Src/: main.c  stm32l4xx_it.c
W01-RTOS_LED/Debug/: W01-RTOS_LED.elf  W01-RTOS_LED.list  W01-RTOS_LED.map  makefile  objects.list  sources.mk
W01-RTOS_LED/Debug/Core/Src/: freertos.d  main.cyclo  main.d  main.su  stm32l4xx_hal_msp.d  stm32l4xx_hal_timebase_tim.d  stm32l4xx_it.d  subdir.mk  system_stm32l4xx.d
W01-RTOS_LED/Debug/Core/Startup/: subdir.mk
WiFi_Client_Server/Inc/: main.h
WiFi_Client_Server/STM32CubeIDE/: .cproject  .project  WiFi_Client_Server Debug.launch
WiFi_Client_Server/STM32CubeIDE/Debug/: WiFi_Client_Server.elf  WiFi_Client_Server.list  WiFi_Client_Server.map  makefile
WiFi_Client_Server/Src/: main.c
ble_central/: central.c  central.py  notify.py  peripheral.py  scan.py  write.py
ble_lab2/: .cproject  .mxproject  .project  ble_lab2 Debug.launch  ble_lab2.ioc
ble_lab2/BlueNRG_MS/App/: app_bluenrg_ms.c  gatt_db.c  sensor.c
ble_lab2/Core/Inc/: main.h
ble_lab2/Core/Src/: main.c  stm32l4xx_it.c
ble_lab2/Debug/: ble_lab2.elf  ble_lab2.list  ble_lab2.map  makefile  objects.list  sources.mk
ble_lab2/Debug/BlueNRG_MS/App/: app_bluenrg_ms.cyclo  app_bluenrg_ms.d  app_bluenrg_ms.su  gatt_db.cyclo  gatt_db.su  sensor.cyclo  sensor.d  sensor.su  subdir.mk
ble_lab2/Debug/Core/Src/: main.cyclo  main.d  main.su  stm32l4xx_hal_msp.cyclo  stm32l4xx_hal_msp.d  stm32l4xx_hal_msp.su  stm32l4xx_it.d  subdir.mk
lsm6dsl/: .cproject  .project  lsm6dsl Debug.launch  lsm6dsl.ioc
lsm6dsl/Core/Src/: main.c
lsm6dsl/Debug/: lsm6dsl.elf  lsm6dsl.list  lsm6dsl.map  makefile
lsm6dsl/Debug/Core/Src/: main.cyclo  main.su
tcp_server_win/: .project  README.md  tcp_line_chart.py  tcp_server.cpp  tcp_server.py
testMEMS/: .cproject  .mxproject  .project  testMEMS Debug.launch  testMEMS.ioc
testMEMS/BlueNRG_MS/App/: app_bluenrg_ms.c
testMEMS/Core/Inc/: RTE_Components.h  main.h  stm32l4xx_it.h
testMEMS/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
week5_PWM/: .cproject  .project  week5_PWM Debug.launch  week5_PWM.ioc
week5_PWM/Core/Inc/: main.h  stm32l4xx_it.h
week5_PWM/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
week5_PWM/Debug/: makefile  week5_PWM.elf  week5_PWM.list  week5_PWM.map
week5_PWM/Debug/Core/Src/: main.cyclo  main.su  stm32l4xx_hal_msp.cyclo  stm32l4xx_hal_msp.su  stm32l4xx_it.cyclo  stm32l4xx_it.su
week6_1/: .cproject  .project  week6_1 Debug.launch  week6_1.ioc
week6_1/Core/Src/: main.c
week6_1/Debug/: makefile
week6_2/: .cproject  .project  week6_2 Debug.launch  week6_2.ioc
week6_2/Core/Src/: main.c
week6_2/Debug/: makefile  objects.list
week6_opt/: .cproject  .project  week6_opt Debug.launch  week6_opt.ioc
week6_opt/Core/Inc/: FreeRTOSConfig.h  main.h  stm32l4xx_it.h
week6_opt/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
week6_opt/Debug/: makefile
week7_DSP/: .cproject  .project  week7_DSP Debug.launch  week7_DSP.ioc
week7_DSP/Core/Inc/: main.h  stm32l475e_iot01_accelero.h
week7_DSP/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
week7_DSP/Debug/: makefile  objects.list  sources.mk  week7_DSP.elf  week7_DSP.list  week7_DSP.map
week7_DSP/Debug/Core/Inc/: stm32l475e_iot01.cyclo  stm32l475e_iot01.d  stm32l475e_iot01.su  stm32l475e_iot01_accelero.cyclo  stm32l475e_iot01_accelero.d  stm32l475e_iot01_accelero.su  subdir.mk
week7_DSP/Debug/Core/Src/: main.cyclo  main.d  main.su  stm32l4xx_hal_msp.cyclo  stm32l4xx_hal_msp.d  stm32l4xx_hal_msp.su  stm32l4xx_it.d  subdir.mk
week7_DSP/Debug/Core/lsm6dsl/: lsm6dsl.cyclo  lsm6dsl.d  lsm6dsl.su  subdir.mk
(+27 files in other folders)
